syntax="proto3";

package greet;
option go_package="github.com/ekkinox/go-grpc/greet/proto/greet";
option php_namespace = "App\\Greet";
option php_metadata_namespace = "App\\GPBMetadata";

message Greeting {
  string title = 1;
  string name = 2;
}

message GreetRequest {
  Greeting greeting = 1;
}

message GreetResponse {
  string result = 1;
}

message GreetManyTimesRequest {
  Greeting greeting = 1;
}

message GreetManyTimesResponse {
  string result = 1;
}

message LongGreetRequest {
  Greeting greeting = 1;
}

message LongGreetResponse {
  string result = 1;
}

message GreetAllRequest {
  Greeting greeting = 1;
}

message GreetAllResponse {
  string result = 1;
}

service GreetService{
  // Unary
  rpc Greet(GreetRequest) returns (GreetResponse){};

  //Server streaming
  rpc GreetManyTimes(GreetManyTimesRequest) returns (stream GreetManyTimesResponse) {};

  //Client streaming
  rpc LongGreet(stream LongGreetRequest) returns (LongGreetResponse) {};

  //BiDi streaming
  rpc GreetAll(stream GreetAllRequest) returns (stream GreetAllResponse) {};
}